Wed Mar 29 19:30:00 UTC 2006  Frank Rehberger  <frehberger@prismtech.com>
        * TAO/tao/Transport.h: Correct the documentation explaining
          message parsing. This is related to #2313

Wed Mar 29 17:15:00 UTC 2006  Frank Rehberger  <frehberger@prismtech.com>
  
        * TAO/tao/DynamicInterface/DII_Invocation_Adapter.cpp:
          TAO/tao/Messaging/Asynch_Invocation_Adapter.cpp:
          TAO/tao/Invocation_Adapter.cpp: 
        
          Guard reply_status() operation with if-else-endif macro for
          MINIMUM builds.
        
Wed Mar 29 15:38:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Notify/Refcountable_Guard_T.h:
          Explicit shouldn't be used for a copy constructor

Wed Mar 29 15:24:45 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/idl.yy (yyparse):
        * TAO_IDL/fe/y.tab.cpp (yyparse):

          Added return with error code immediately after outputting
          a lookup error for an enum type, since further parsing
          leads to a crash. Thanks to Jules Colding <colding@omesc.com>
          for reporting the problem and submitting examples IDL files.

Wed Mar 29 03:42:55 UTC 2006  Balachandran Natarajan  <bala_natarajan at symantec dot com>

        * docs/Options.html:

          Added documentation for -ORBConnectionHandlerCleanup.

Tue Mar 28 23:59:00 UTC 2006  Frank Rehberger <frehberger@prismtech.com>
  
        * TAO/orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.{h,cpp}:
          TAO/tao/Service_Callbacks.{h,cpp}:
          Add operation is_permanent_forward_condition()
        * TAO/orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/Server_Request_Interceptor.cpp:
          TAO/orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/test.idl:
          Add reset() operation to interceptor to be able to do colocal
          and repeat as remote test. Also store forward objects as
          deep-copies.